--- a/ord_plan.qmd
+++ b/ord_plan.qmd
@@ -91,7 +91,7 @@ r <- tbl |>
 
 <!-- communication through the opents project, code as communication channel --> 
 
-In work package 1 (WP1), we lay the technical foundation to re-publish public data as a machine readable resource. Our approach use license cost free open source software and aims to publish not only the data but also the technical framework in order to ensure reproducibility and comply with FAIR principles. In addition, the *opents* project embraces an infrastructure-as-code approach and publishes this information on the runtime environment in order to facilitate operation of an instance of the *opents* framework through others. 
+In work package 1 (WP1), we lay the technical foundation to re-publish public data as a machine readable resource. Our approach use license cost free open source software and aims to publish not only the data but also the technical framework in order to ensure reproducibility and comply with FAIR principles. In addition, the *opnts* project embraces an infrastructure-as-code approach and publishes this information on the runtime environment in order to facilitate operation of an instance of the *opnts* framework through others. 
 
 Because an active community is inevitable to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. R is known for its large and inclusive community with its annual user conferences and vibrant local communities (insert figure Ben's community explorer, article on useR!, hosted in 2021). Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well established boilerplating ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or Roxygen [@roxygen2]. 
 
