--- a/ord_plan.qmd
+++ b/ord_plan.qmd
@@ -95,7 +95,7 @@ In work package 1 (WP1), we lay the technical foundation to re-publish public da
 
 Because an active community is inevitable to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. R is known for its large and inclusive community with its annual user conferences and vibrant local communities (insert figure Ben's community explorer, article on useR!, hosted in 2021). Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well established boilerplating ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or Roxygen [@roxygen2]. 
 
-WP1 focuses on the concrete implementation of the data ingestion and transformation process. In a first implementation step, we identify common parts of the ingestion process across data providers and datasets. We compose these common parts in an R package that forms our core library and fosters reuse of source code. idiosyncrasies. We encourage the community to use our core packages and to contribute by adding further dataset specific packages. To inspire contributions, we supplement the opents core, based on our long term experience as consumers of public data, with provider specific R libraries that cover dataset idiosyncrasies.
+WP1 focuses on the concrete implementation of the data ingestion and transformation process. In a first implementation step, we identify common parts of the ingestion process across data providers and datasets. We compose these common parts in an R package that forms our core library and fosters reuse of source code. We encourage the community to use our core packages and to contribute by adding further dataset specific packages. To inspire contributions, we supplement the opents core, based on our long term experience as consumers of public data, with provider specific R libraries that cover dataset idiosyncrasies.
 
 
 <!--- Insert schematic process -->
