--- a/ord_plan.qmd
+++ b/ord_plan.qmd
@@ -95,7 +95,7 @@ In work package 1 (WP1), we lay the technical foundation to re-publish public da
 
 Because an active community is inevitable to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. R is known for its large and inclusive community with its annual user conferences and vibrant local communities (insert figure Ben's community explorer, article on useR!, hosted in 2021). Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well established boilerplating ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or Roxygen [@roxygen2]. 
 
-WP1 focuses on the concrete implementation of the data ingestion and transformation process. In a first implementation step, we identify common parts of the ingestion process across data providers and datasets. We compose these common parts in an R package that forms our core library and fosters reuse of source code. We encourage the community to use our core packages and to contribute by adding further dataset specific packages. To inspire contributions, we supplement the opents core, based on our long term experience as consumers of public data, with provider specific R libraries that cover dataset idiosyncrasies.
+WP1 focuses on the concrete implementation of the data ingestion and transformation process. In a first implementation step, we identify common parts of the ingestion process across data providers and datasets. We compose these common parts in an R package that forms our core library and fosters reuse of source code. We encourage the community to use our core packages and to contribute by adding further dataset specific packages. To inspire contributions, we supplement the opnts core, based on our long term experience as consumers of public data, with provider specific R libraries that cover dataset idiosyncrasies.
 
 
 <!--- Insert schematic process -->
@@ -153,7 +153,7 @@ The goal of Work package 2 (WP2) is find the platforms our community data and co
 
 ### Implementation
 
-The *opents* approach suggested here, splits data and metainformation into two separate text files and formats: a simple .csv spreadsheet and a nested .json file for multi-lingual data description. Having two simple text files per dataset allows us to disseminate the resulting time series data on free, standard infrastructure such as GitHub that is well established in the open source community. The state-of-the-art rendering of .csv spreadsheets of git modern platforms sets the barrier to explore and consume our scientific use time series datasets as low as possible. Hence, the publication of data on GitHub, possibly using git's Large File Storage (LFS) extension, forms oru baseline scenario. Yet, in WP2 we explore the feasibility of other, complementary, regional and international publication channels such
+The *opnts* approach suggested here, splits data and metainformation into two separate text files and formats: a simple .csv spreadsheet and a nested .json file for multi-lingual data description. Having two simple text files per dataset allows us to disseminate the resulting time series data on free, standard infrastructure such as GitHub that is well established in the open source community. The state-of-the-art rendering of .csv spreadsheets of git modern platforms sets the barrier to explore and consume our scientific use time series datasets as low as possible. Hence, the publication of data on GitHub, possibly using git's Large File Storage (LFS) extension, forms oru baseline scenario. Yet, in WP2 we explore the feasibility of other, complementary, regional and international publication channels such
 opendata.swiss, r-universe or Zenodo.
 
 <!-- CSV + JSON = opents , do we want to have a demo here ? code block mit .csv (README swissdata org--->
