--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,14 @@
+@book{rsebook,
+title = {Research Software Engineering - A Guide to the Open Source Ecosystem},
+author = {Matthias Bannert},
+year = {2024 forthcoming},
+publisher = {CRC/Chapman & Hall},
+series = {CRC Data Science}
+}
+
+
+
+
  @Manual{pkgdown,
     title = {pkgdown: Make Static HTML Documentation for a Package},
     author = {Hadley Wickham and Jay Hesselberth and Maëlle Salmon},
@@ -14,6 +25,7 @@
     note = {R package version 7.2.3},
     url = {https://CRAN.R-project.org/package=roxygen2},
   }
+
 
 
 
