--- a/ord_plan.qmd
+++ b/ord_plan.qmd
@@ -1,6 +1,10 @@
 
 # ORD Project Plan
 
+The following sections explain our approach in greater detail. 
+Though working packages can be seen as stages in general, working packages are not strictly sequential as some activities are continuous efforts.
+The subsequent chapter gives an overview that shows responsibilities within the team and intensitvity of activities throughout the project.
+
 ## WP0: Coordination and Planning
 
 ```{r,echo=FALSE,message=FALSE,warning=FALSE}
@@ -36,18 +40,16 @@ r <- tbl |>
 :::
 
 
-### Goals {.unnumbered}
-
-During the starting stage of our project, we coordinate with major public data providers and involve data sources in our planning early on. We do so in order to establish and maintain active, lively communication between public data providers and the scientific usage community. 
+**During the starting stage of our project, we coordinate with major public data providers and involve data sources in our planning early on. We do so to establish and maintain active, lively communication between public data providers and the scientific community.** 
 
 <!-- activities & RQs -->
-Publicly available economic data provided by the Federal Statistical Office (FSO), the Secretariat of Economic affairs (SECO), the Swiss National Bank (SNB) as well as regional Statistical Offices are important sources for economic research and monitoring of the Swiss economy. To develop an ORD spirit and a community of a data providers and scientific users of the data, it is crucial to involve these public institutions early on. Early dialogue helps to avoid reduncancies with existing data community initiatives and to develop a common understanding of *open data*, machine readability and datasets of priority. 
+Publicly available economic data provided by the Federal Statistical Office (FSO), the Secretariat of Economic Affairs (SECO), the Swiss National Bank (SNB), and regional Statistical Offices are important sources for economic research and monitoring of the Swiss economy. To develop an ORD spirit and a community of a data providers and scientific users of the data, it is crucial to involve these public institutions early on. Early dialogue helps to avoid redundancies with existing data community initiatives and to develop a common understanding of *open data*, machine readability and datasets of priority. 
 
-One of the core parts of our approach is to leverage the investment into open data and strengthen connection between academia and federal and regional administration is to integrate public data into academic teaching. To explore how to effectively use the joint expertise of public data providers, domain experts, data stewards of the ETH domain and data engineers, we launch a series of monthly meetups early in the process. The meetups are designed to foster inclusive expert discussions through publicly pre-circulated content. We are working to integrate our meetup series into the academic curriculum at ETH, but keep the series open to interested participants beyond academia. 
+One of the core ideas is to leverage the investment into open data by integrating public data into academic teaching to strengthen the connection between public administration and academia. To explore how to effectively use the joint expertise of public data providers, domain experts, data stewards of the ETH domain, and data engineers, we launch a series of monthly meetups early in the process. The meetups are designed to foster inclusive, expert discussions through publicly pre-circulated content. We are working to integrate our meetup series into the academic curriculum at ETH, but we keep the series open to interested participants beyond academia. 
 
 
 
-## WP1: Homogenization of Data Processing Across Data Sources
+## WP1: Make Data Processing Framework Inclusive
 
 
 ```{r,echo=FALSE,message=FALSE,warning=FALSE}
@@ -86,22 +88,31 @@ r <- tbl |>
 
 :::
 
-
-### Goals {.unnumbered}
-
 <!-- communication through the opents project, code as communication channel --> 
 
-In work package 1 (WP1), we lay the technical foundation to re-publish public data as a machine readable resource. Our approach use license cost free open source software and aims to publish not only the data but also the technical framework in order to ensure reproducibility and comply with FAIR principles. In addition, the *opents* project embraces an infrastructure-as-code approach and publishes this information on the runtime environment in order to facilitate operation of an instance of the *opents* framework through others. 
+In Work Package 1 (WP1), we lay the technical foundation for turning KOF Swiss Economic Institute's existing production process of macroeconomic time series into an open-source framework that creates publicly available, machine-readable scientific-grade time series in fully reproducible fashion. 
+Our approach uses license cost free open source software and aims to publish not only the resulting time series data but also the technical framework and infrastructure setup. Doing so ensures reproducibility and helps to comply with FAIR principles. Thanks to our infrastructure-as-code approach we can publish information on an ideal runtime environment to help others operate their own instance of the *opents* framework.
 
-Because an active community is inevitable to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. R is known for its large and inclusive community with its annual user conferences and vibrant local communities (insert figure Ben's community explorer, article on useR!, hosted in 2021). Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well established boilerplating ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or Roxygen [@roxygen2]. 
+Because an active community is inevitable to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. R is known for its large and inclusive community with its annual user conferences [@inclusivecon] and vibrant local communities^[@rsebook discusses the importance of communities for the learner, including experience from hosting the useR! Conference 2021 which KOF co-chaired.] . Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well-established boiler plating ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or Roxygen [@roxygen2]. 
 
-WP1 focuses on the concrete implementation of the data ingestion and transformation process. In a first implementation step, we identify common parts of the ingestion process across data providers and datasets. We compose these common parts in an R package that forms our core library and fosters reuse of source code. idiosyncrasies. We encourage the community to use our core packages and to contribute by adding further dataset specific packages. To inspire contributions, we supplement the opents core, based on our long term experience as consumers of public data, with provider specific R libraries that cover dataset idiosyncrasies.
+WP1 focuses on the homogenization of the data ingestion process across datasets and data providers. In the first implementation step, we identify common parts of the ingestion process.
+We bundle these common parts in an R package that forms our core library and fosters reuse of source code. We encourage the community to use our core packages and to contribute by adding further dataset-specific packages. To inspire contributions, we supplement the opents core, based on our long-term experience as consumers of public data, with provider-specific ingestion libraries written in R that cover dataset idiosyncrasies.
 
+![Example of a traditional official data publication of the Swiss GDP. Source: SECO, https://www.seco.admin.ch/seco/en/home/wirtschaftslage---wirtschaftspolitik/Wirtschaftslage/bip-quartalsschaetzungen-/daten.html ](gdp_example.png)
 
-<!--- Insert schematic process -->
-<!--- code example (demo, reference, appendix) -->
+The above screenshot shows a traditional data publication of an official GDP statistic. 
+Its use of multiple worksheets, empty lines and multi-line headers hampers machine readability.
+Like many regular consumers of the information contained in this spreadsheet, KOF ingest this information immediately after its publication. 
 
-At the end of WP1, we plan to iterate over the resulting datasets and data descriptions and enhance meta information where necessary. We do so in reproducible and transparent fashion by adding all changes to the source code that produces the data and metadata files. 
+![Screenshot of a machine-readable data file, processed by an R-based engine.](longformat.png)
+
+To have a homogeneous, machine-readable representation of the data, we split this information into two files: based on the CSV on the web idea by the World Wide Web Consortium (W3C), we use a long format CSV file for the data and a JSON file for the metadata. 
+The metadata file takes advantage of the JSON format's ability to handle nested data to store comprehensive, multilingual meta information. 
+Our collaborative approach with the Secretariat of Economic Affairs (SECO) led to a pioneering pilot publication of machine-readable data on the official SECO website: Machine-readable data is published in complementary fashion to the traditional GDP publication^[See also: https://www.seco.admin.ch/seco/en/home/wirtschaftslage---wirtschaftspolitik/Wirtschaftslage/bip-quartalsschaetzungen-/daten.html]. 
+
+![Excerpt of the corresponding metadata file in JSON format.](metadata.png)
+
+At the end of WP1, we plan to iterate over the resulting datasets and data descriptions and enhance meta information where necessary. We do so in reproducible and transparent fashion by adding all changes to the source code that produces the data and metadata files.
 
 ## WP2: Publication
 
@@ -147,53 +158,18 @@ r <- tbl |>
 :::
 
 
-### Goals
+*The goal of Work Package 2 (WP2) is to find the platforms that suit our community, data and code components best and facilitate our approach to ORD. We will involve our data consumers and collaborators into this decision-making process. Based on our *open by default* thinking, we will publish not only the resulting time series data and meta information, but all components of our software framework. In the process, we will work together with the ETH legal service to find the most suitable open source licensing solution^[see https://choosealicense.com/] for all components of the opents project.*
 
-The goal of Work package 2 (WP2) is find the platforms our community data and code components best and facilitates our approach to ORD. We will involve our data consumers and collaborators into this decision making process. Based on our *open by default* thinking, we will publish not only the resulting time series data and meta information, but all components of our software framework. In the process, we will work together with ETH legal service to find the most suitable open source licensing solution for all components of the opents project.
+The *opents* approach, suggested here, splits data and meta information into two separate text files and formats: a simple CSV spreadsheet and a nested JSON file for multilingual data description. Having two simple text files per dataset allows us to disseminate the resulting time series data on free, standard infrastructure such as GitHub, which is well established in the open-source community. The state-of-the-art rendering of CSV spreadsheets of modern git platforms sets the barrier to exploring and consuming our scientific use time series datasets as low as possible. Hence, the publication of data on GitHub, possibly using git's Large File Storage (LFS) extension, forms our baseline scenario. Yet, in WP2, we explore the feasibility of other, complementary, regional and international publication channels such as opendata.swiss^[https://opendata.swiss], r-universe or Zenodo.
 
-### Implementation
+Technically, the *opents* framework consists of a core R package and several data provider-specific ingestion packages. Again, we see the publication of all these components as open-source libraries on GitHub (or another major Git platform with good visibility) as the baseline form of publication. In addition, WP2 explores which of our components are suitable for a publication on the Comprehensive R Archive Network (CRAN). Publication on CRAN comes with requirements and quality control but opens up our work to a larger audience as endusers face the lowest possible hurdle to install our packages. 
 
-The *opents* approach suggested here, splits data and metainformation into two separate text files and formats: a simple .csv spreadsheet and a nested .json file for multi-lingual data description. Having two simple text files per dataset allows us to disseminate the resulting time series data on free, standard infrastructure such as GitHub that is well established in the open source community. The state-of-the-art rendering of .csv spreadsheets of git modern platforms sets the barrier to explore and consume our scientific use time series datasets as low as possible. Hence, the publication of data on GitHub, possibly using git's Large File Storage (LFS) extension, forms oru baseline scenario. Yet, in WP2 we explore the feasibility of other, complementary, regional and international publication channels such
-opendata.swiss, r-universe or Zenodo.
+![Download of R packages from CRAN is very convenient in all major R environments. The screenshot shows an example of RStudio's graphical user interface for searching and downloading a package.](install.png)
 
-<!-- CSV + JSON = opents , do we want to have a demo here ? code block mit .csv (README swissdata org--->
-
-Technically, the *opents* framework consists of a core R package and several data provider specific ingestion packages. Again, we see the publication of all these components as open source libraries on GitHub or another major Git platform with good visibility as the baseline form of publication. In addition, WP2 explores which of our components are suitable for a publication on the Comprehensive R Archive Network (CRAN). Publication on CRAN comes with requirements and quality control but opens up our work to a larger audience as endusers face the lowest possible hurdle to install our packages. 
-
-<!-- example screenshot of GUI downloading package from CRAN -->
+We will also explore more recent and experimental approaches, such as r-universe which helps to improve our reach in the data science community. In WP2, we aim to expose our work to an rOpenSci peer review. rOpenSci shares our values of open and reproducible research through reuse and helps us reach ORD excellence. 
 
 
-We will also explore more recent and experimental approaches such as r-universe which helps to improve our reach in the data science community. In WP2, we aim to expose our work to an rOpenSci peer review. rOpenSci shares our values of open and reproducible research through reusable and helps us to reach ORD excellence. 
-
-- choosealicense
-- CRAN
-- GitHub
-- runiverse
-- rOpenSci
-- Zenodo
-- opendata.swiss
-- licenses (ETH Rechtsdienst)
-
-
-
-- split meta information and data
-- store data on github (possibly LFS)
-- time series data
-
-- code & runtime environment
-    - publish as an R package on CRAN 
-    - publish on GitHub for developers, contributors
-
-
-baseline scenario OSS (GitHub) -> explain components -> which platforms provide benefits for our community in addition to mere open sourcing.
-
-
-
-
-
-
-
-## WP3: Community Activation
+## WP3: Facilitate Usage and Applications 
 
 ```{r,echo=FALSE,message=FALSE,warning=FALSE}
 library(readr)
@@ -230,6 +206,51 @@ r <- tbl |>
 
 :::
 
+*The goal of work package 3 (WP3) is to promote usage of the framework and data as well as to encourage others to contribute. 
+In particular we are looking for community contributions such as maintenance of existing datasets, addition of public datasets that have not yet been processed and community activities. 
+At this stage, we will also intensify activities to explore the expansion of *opnts* into different academic fields.*
+
+We plan to approach the above goals in three ways: i) integration of opnts data and software into academic teaching aimed at scientists from different disciplines. ii) presentation of opnts at useR! 2024 in Salzburg, Austria^[useR! is the annual conference of R users. useR! conference usually draw more than 1'000 international users from a large variety of fields. See also https://events.linuxfoundation.org/user/]. iii) participation in local community events iv) hosting of an own event at KOF. 
+
+Starting in fall 2024, opnts data and software will be integrated into the Hacking for Science course^[See also: https://ethz.ch/en/the-eth-zurich/education/innovation/kite-award/kite-award-2022/nominierte-projekte-kite-award-2022/hacking-for-social-sciences.html]. 
+Originally created for ETHZ D-MTEC PhD students, Hacking for Science is a highly interactive online course whose big picture guidance and hands-on software development approach continues to draw interest from students from a variety of fields. 
+The course last iteration welcomed students from more than 10 different ETH departments as well as guests from outside ETH.
+We aim to communicate the value of open data to this broad audience and learn which challenges ORD faces in different fields. 
+Currently, we also explore the possibility of running Hacking for Research Assistants – a satellite event for research assistants.
+In addition our teaching is complemented by the RSEED seminar series started in early 2024 which gives us an additional channel to promote an ORD mindset.
+
+Centered around the submission of opents to useR! 2024, we plan further activity at conferences and community events. 
+At ETH, the Scientific Computing group has recently founded a Research Software Engineering (RSE) group^[The RSE group is already well connected to the global RSE movement, partiuclarly to the Society of Research Software Engineering in the UK. See also https://rse.ethz.ch/] to connect software engineers in science at ETH. 
+Regular RSE events at ETH as well as the vibrant, local open source and opendata community^[see events such as opendata beer, lovedata week] will gives us a chance to present the opnts project, e.g., at the RSE group or the local R user group.
+KOF hosted useR! in 2021 and is well connected to the R community.
+This history and connections gives a great chance for a successful application to host an existing special interest conference such as *R in Official Statistics* at KOF. Hosting a well-established, smaller special interest conference allows us to give the entire event an ORD focus push ORD excellence in Official Statistics. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--- crap line
+
+
+
+ - RSECON 2024 (in case of budget restrictions)
+ - regular updates within community through out the project: opendatabeer, lovedata week, etc. - continuously establish and bolster community (sustainability, can survive without us)
+
+
+ - plan to present and promote UseR in Salzburg...
+
+Finally, opnts will be presented at a number of community events focused on research software engineering (and economic data). Existing community events such as RSE@ETH, RSECON 2024 and the RSEED at KOF meetup series have a large and intersectoral reach. From academia to administration and the private sector, the audience of these events is more diverse than that of a single event. By presenting the opnts project at conferences or events such as these, we introduce opnts to professionals in different fields with different open source needs and ideas for collaboration.
 
 
 
