--- a/index.qmd
+++ b/index.qmd
@@ -11,10 +11,10 @@
 
 ## Problem Statement
 
-Opnts bridges the gap between official statistics and academic research. Even though public availability of official statistics is decent in Switzerland, data publications of regional and federal public data providers often lack machine readability. Therefore, these data publications are not convenient for academic researchers and other groups who ingest public data frequently.
+Opnts bridges the gap between official statistics and academic research. Even though most official statistics in Switzerland are publicly available, data publications from regional and federal public data providers often lack machine readability. Therefore, these data publications are not convenient for academic researchers and other groups who ingest public data frequently.
 
-In the field of economics, for example, intertemporal comparisons play an important role. This implies regular and timely ingestion of data.
-Traditional data publications are often unsuitable^[See Working Package 1 of the ORD Project Plan for a concrete example of challenges with ingestion of official statistics.] for the scientific consumer, as modern economic (forecasting) models make use of hundreds or thousands of variables stemming from a large range of datasets.
+In the field of economics, for example, intertemporal comparisons play an important role. This type of research implies regular and timely sourcing of data.
+Traditional data publications are often unsuitable^[See Working Package 1 of the ORD Project Plan for a concrete example of challenges with processing of official statistics.] for the scientific consumer, as modern economic (forecasting) models make use of hundreds or thousands of variables stemming from a large range of datasets.
 Particularly, researchers who source a large amount of time series data from different providers suffer from the substantial difference in the pace of the digital transformation across providers or even different departments of the same providers. 
  
 Though application programming interfaces (APIs) from the official providers have led to great improvements in the machine readability of public data, machine readability is not homogenous across datasets. Opnts mitigates this dynamic problem by not only publishing time series data created from a fully transparent process, but also by providing an open technical processing framework. The opnts framework eases the data sourcing and quality control burden and, at the same time, encourages researchers to contribute time series datasets of their own. In addition, opnts establishes a steady and hands-on exchange between regional and federal data providers and the community of academic users of public data.
@@ -33,13 +33,13 @@ Economic forecasting and its evaluation, studies of shock absorption, and many o
 Modern models often use hundreds, or even thousands, of time series. 
 
 Even though machine readability of publicly available data has improved in Switzerland thanks to great efforts led by the Swiss Federal Statistical Office (SFSO), researchers face a publication mindset that is focused on the wider public and hence on the most recent wave of data. 
-As a consequence, variable names or features may change over time and minor errors may simply get corrected ad hoc or with the next publication — even in datasets that are already available through an application programming interface. 
+As a consequence, variable names or features may change over time and minor errors may simply get corrected on *ad hoc* basis or with the next publication — even in datasets that are already available through an application programming interface. 
 In combination with different degrees of machine readability across different providers of public data, the issues mentioned above can lead to two very heterogeneous situations when it comes to automated data ingestion – particularly for those researchers who need a large amount of data from various providers. 
 Another aspect in which the focus of public data providers differs from academic research is the importance of readily available so-called real time vintages. 
 Vintages can be seen as versions of time series that allow researchers to work with a past publications even after the official version has been revised. 
 While versioned time series are inevitable for many research exercises such as evaluation of forecasts based on the data that had been available when the forecast was made, multiple official versions are harder to communicate to the broader public and induce higher data management costs. 
 
-Our motivation is to help the time series community *immediately,* while larger organizations face different challenges in their own digital transformation.
+Our motivation is to help the time series community *immediately,* while larger organizations address different challenges in their own digital transformation.
 We intend to do so by not only open-sourcing a framework to create scientific grade time series from official statistics, but also publishing our framework in the most transparent way possible:
 
 ::: callout-note
@@ -48,7 +48,7 @@ We intend to do so by not only open-sourcing a framework to create scientific gr
 
 i) We focus on thorough documentation that involves the community;
 
-ii) We provide comprehensive application examples, making many thousand proven time series publicly available; 
+ii) We provide comprehensive application examples facilitating transfer to one's own needs, making many thousand proven time series publicly available; 
 
 iii) Machine readable data and the opnts automation framework facilitate hosting a versioned time series database substantially;
 
@@ -59,16 +59,17 @@ iv) We have an infrastructure-as-code approach and share precise information on 
 
 ### Sustainability through Cooperation: Official Statistics and Public Data {.unnumbered}
 
-At the same time, our commitment to regular publication of data-driven indicators designed for intertemporal comparison and our identification with the official statistics community ensures the sustainability of the *opnts* effort.
+At the same time, our commitment to regular publication of data-driven indicators designed for intertemporal comparison and our leading role in the community ensures the sustainability of the *opnts* effort.
 The strong empirical focus of the academic research of the KOF Swiss Economic Institute at ETH provides great synergies with the production of forecasts and indicators, many of which rely on publicly available data provided by federal and regional administrations.
 
 ```{r,echo=FALSE,message=FALSE,warnings=FALSE, eval=TRUE}
-#| fig-cap: "The KOF Economic Barometer is a forward looking indicator (FLI) for the Swiss economy. It is well received in Switzerland and used as the official FLI for Switzerland by the International Monetary Fund (IMF)."
+#| fig-cap: "The KOF Economic Barometer is a forward looking indicator (FLI) for the Swiss economy. It is well received in Switzerland and used as the official FLI for Switzerland by the International Monetary Fund (IMF). source: KOF Swiss Economic Institute, ETH Zurich."
 
 library(kofdata)
 library(tstools)
 tsl <- get_time_series("ch.kof.barometer")
-tsplot(tsl)
+tsplot(tsl,
+       plot_title =  "Economic Forward Looking Indicator (FLI) for Switzerland")
 
 
 ```
@@ -76,8 +77,8 @@ tsplot(tsl)
 In addition to its popular indicators for the Swiss economy, KOF makes a wide array of fine-grained, sector-specific time series publicly available. 
 At the time of composing this ORD proposal, the KOF time series explorer made more than 31'000 time series publicly available in human browsable and machine-readable fashion alike^[see also https://ts-explorer.kof.ethz.ch].
 This experience with regular publication of economic data, the production of indicators, forecasts over decades and KOF's national mandate to monitor the Swiss economy makes us relate further to the needs and challenges of official statistics.
-Through our steady exchange with key data providers and data consumers such as the Swiss National Bank (SNB), the Swiss Federal Statistical Office (SFSO), the Secretariat of Economic Affairs (SECO), the State Secretariat of Education, Research, and Innovation (SERI) and the cantonal statistical offices we are aware that other institutions have often implemented data sourcing processes to process publicly available data that are similar to our own.
-Hence, open sourcing our implementation and the use of source code and example data pipelines as a commnunication channel will impact the community in three sustainable ways: 
+Through our steady exchange with key data providers and data consumers such as the Swiss National Bank (SNB), the Swiss Federal Statistical Office (SFSO), the Secretariat of Economic Affairs (SECO), the State Secretariat of Education, Research, and Innovation (SERI) and the cantonal statistical offices we are aware that other institutions have often cumbersome, semi-automatic data sourcing processes to process publicly available that are highly redundant across institutions.
+Hence, not only open sourcing our implementation but commiting to put in the substantial additional effort in to make our solution inclusive and transparent to others will impact the community in three sustainable ways: 
 
 ::: callout-note
 
@@ -85,14 +86,15 @@ Hence, open sourcing our implementation and the use of source code and example d
 
 i.) we help to reduce redundant implementation across publicly financed institutions
 
-ii.) we communicate the needs of the research community in a highly dynamic field 
+ii.) we establish a channel designed to be understood across institutions and fields to communicate the needs of the research community in a highly dynamic environment
 
 iii.) we develop a blueprint working process in collaborative fashion, increasing commitment of involved collaborators
 
 :::
 
-The horizontal and upstream feedback generated in the process is a core strategy of the opnts project that we validated in talks with official data providers in advance of this proposal. 
-Concrete steps could be the integration of FSO experts into teaching or the use of Swiss data in academic teaching and open-source software packages.
+The horizontal and upstream feedback generated in the process is a core strategy of the opnts project that we validated in talks with official data providers in advance of this proposal.
+Communication through code is unambiguous and reproducible and helps communicate needs across fields and perspectives and focuses.  
+Further concrete steps could be the integration of FSO experts into teaching or the use of Swiss data in academic teaching and open-source software packages.
 
 The opnts project can build on an established network for great outreach and the same time unleashes an entirely new group of publicly available, scientific use grade time series datasets. 
 While the vast majority of the existing, aforementioned KOF time series stem from KOF's own business tendency surveys, the opnts project facilitates research use of additional data stemming from other providers, most notably the Swiss Federal Statistical Office (FSO).
